--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <section class="contact-section">
     <article class="contact">
       <div class="contact-banner fade-in">
-        <img src="https://i.imgur.com/nKRmRuo.jpeg" alt="Banner" />
+        <img src="./assets/images/banner.jpeg" alt="Banner" />
       </div>
       <div class="contact-form fade-in">
         <form action="?" method="POST">
